feat: Footer compact + pleine largeur welcome + coordonnées complètes ✅
- Footer sans logo (gain de place)
- Footer pleine largeur sur welcome (fix body padding-left)
- Coordonnées complètes (LIWE + adresse + email)
- Footer compact (espacements réduits)
- Cache v33

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Liwe - Experts IT & Stratégiques</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Styles de base -->
-    <link rel="stylesheet" href="assets/css/styles-base.css?v=28">
+    <link rel="stylesheet" href="assets/css/styles-base.css?v=33">
     <!-- Styles responsives par device -->
-    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=28">
-    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=28">
-    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=28">
+    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=33">
+    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=33">
+    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=33">
 </head>
 <body>
     <!-- Hamburger Menu Button (Mobile only) -->
@@ -3878,5 +3878,36 @@ IMPORTANT : Quand tu collectes les coordonnées, commence TOUJOURS ta réponse p
             emailjs.init(CHAT_CONFIG.EMAILJS_PUBLIC_KEY);
         })();
     </script>
+
+    <!-- Footer -->
+    <footer class="site-footer" id="siteFooter">
+        <div class="footer-content">
+            <!-- Logo & Baseline -->
+            <div class="footer-brand">
+                <h3 class="footer-title">LIWE</h3>
+                <p class="footer-baseline">Services. Solutions. Sans limites.</p>
+            </div>
+
+            <!-- Coordonnées -->
+            <div class="footer-contact">
+                <p class="footer-address">114 rue de Sèze, 69006 Lyon</p>
+                <a href="mailto:contact@liwe-services.com" class="footer-email">contact@liwe-services.com</a>
+            </div>
+
+            <!-- Navigation Links -->
+            <div class="footer-links">
+                <a href="#" class="footer-link">Mentions légales</a>
+                <span class="footer-separator">•</span>
+                <a href="#" class="footer-link">CGV</a>
+                <span class="footer-separator">•</span>
+                <a href="#" class="footer-link" onclick="openSidebarSection('contact'); return false;">Contact</a>
+            </div>
+
+            <!-- Copyright -->
+            <div class="footer-copyright">
+                © 2025 Liwe. Tous droits réservés.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
