--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Liwe - Experts IT & Stratégiques</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- Styles de base -->
-    <link rel="stylesheet" href="assets/css/styles-base.css?v=77">
+    <link rel="stylesheet" href="assets/css/styles-base.css?v=76">
     <!-- Styles responsives par device -->
-    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=77">
-    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=77">
-    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=77">
+    <link rel="stylesheet" href="assets/css/styles-mobile.css?v=76">
+    <link rel="stylesheet" href="assets/css/styles-tablet.css?v=76">
+    <link rel="stylesheet" href="assets/css/styles-desktop.css?v=76">
 </head>
 <body>
     <!-- Hamburger Menu Button (Mobile only) -->
@@ -3026,19 +3026,19 @@
                                 
                                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 30px 0;">
                                     <div style="background: rgba(255, 127, 92, 0.08); padding: 25px; border-radius: 12px; text-align: center; border: 1px solid rgba(255, 127, 92, 0.2);">
-                                        <div class="stat-title" style="font-size: 0.85rem; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Cloud & SaaS</div>
+                                        <div style="font-size: 0.85rem; color: rgba(245, 245, 247, 0.6); margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Cloud & SaaS</div>
                                         <div style="font-size: 2.2rem; font-weight: 900; color: #FF7F5C; margin-bottom: 5px;">+12,5%</div>
-                                        <div class="stat-subtitle" style="font-size: 0.9rem;">Migration accélérée</div>
+                                        <div style="font-size: 0.9rem; color: rgba(245, 245, 247, 0.5);">Migration accélérée</div>
                                     </div>
                                     <div style="background: rgba(255, 127, 92, 0.08); padding: 25px; border-radius: 12px; text-align: center; border: 1px solid rgba(255, 127, 92, 0.2);">
-                                        <div class="stat-title" style="font-size: 0.85rem; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">IA & Data</div>
+                                        <div style="font-size: 0.85rem; color: rgba(245, 245, 247, 0.6); margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">IA & Data</div>
                                         <div style="font-size: 2.2rem; font-weight: 900; color: #FF7F5C; margin-bottom: 5px;">+18,3%</div>
-                                        <div class="stat-subtitle" style="font-size: 0.9rem;">Demande explosive</div>
+                                        <div style="font-size: 0.9rem; color: rgba(245, 245, 247, 0.5);">Demande explosive</div>
                                     </div>
                                     <div style="background: rgba(255, 127, 92, 0.08); padding: 25px; border-radius: 12px; text-align: center; border: 1px solid rgba(255, 127, 92, 0.2);">
-                                        <div class="stat-title" style="font-size: 0.85rem; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Cybersécurité</div>
+                                        <div style="font-size: 0.85rem; color: rgba(245, 245, 247, 0.6); margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Cybersécurité</div>
                                         <div style="font-size: 2.2rem; font-weight: 900; color: #FF7F5C; margin-bottom: 5px;">+15,7%</div>
-                                        <div class="stat-subtitle" style="font-size: 0.9rem;">Enjeu prioritaire</div>
+                                        <div style="font-size: 0.9rem; color: rgba(245, 245, 247, 0.5);">Enjeu prioritaire</div>
                                     </div>
                                 </div>
 
@@ -3075,19 +3075,19 @@
                                 
                                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 30px 0;">
                                     <div style="background: rgba(255, 127, 92, 0.08); padding: 25px; border-radius: 12px; text-align: center; border: 1px solid rgba(255, 127, 92, 0.2);">
-                                        <div class="stat-title" style="font-size: 0.85rem; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Budget IA 2025</div>
+                                        <div style="font-size: 0.85rem; color: rgba(245, 245, 247, 0.6); margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Budget IA 2025</div>
                                         <div style="font-size: 2.2rem; font-weight: 900; color: #FF7F5C; margin-bottom: 5px;">+45%</div>
-                                        <div class="stat-subtitle" style="font-size: 0.9rem;">vs 2024</div>
+                                        <div style="font-size: 0.9rem; color: rgba(245, 245, 247, 0.5);">vs 2024</div>
                                     </div>
                                     <div style="background: rgba(255, 127, 92, 0.08); padding: 25px; border-radius: 12px; text-align: center; border: 1px solid rgba(255, 127, 92, 0.2);">
-                                        <div class="stat-title" style="font-size: 0.85rem; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Projets Cloud</div>
+                                        <div style="font-size: 0.85rem; color: rgba(245, 245, 247, 0.6); margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Projets Cloud</div>
                                         <div style="font-size: 2.2rem; font-weight: 900; color: #FF7F5C; margin-bottom: 5px;">+32%</div>
-                                        <div class="stat-subtitle" style="font-size: 0.9rem;">Migrations actives</div>
+                                        <div style="font-size: 0.9rem; color: rgba(245, 245, 247, 0.5);">Migrations actives</div>
                                     </div>
                                     <div style="background: rgba(255, 127, 92, 0.08); padding: 25px; border-radius: 12px; text-align: center; border: 1px solid rgba(255, 127, 92, 0.2);">
-                                        <div class="stat-title" style="font-size: 0.85rem; margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Automatisation</div>
+                                        <div style="font-size: 0.85rem; color: rgba(245, 245, 247, 0.6); margin-bottom: 10px; text-transform: uppercase; letter-spacing: 0.1em;">Automatisation</div>
                                         <div style="font-size: 2.2rem; font-weight: 900; color: #FF7F5C; margin-bottom: 5px;">+28%</div>
-                                        <div class="stat-subtitle" style="font-size: 0.9rem;">ROI prouvé</div>
+                                        <div style="font-size: 0.9rem; color: rgba(245, 245, 247, 0.5);">ROI prouvé</div>
                                     </div>
                                 </div>
 
